// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`addRelation Saga should call saveRelations saga with new relations list 1`] = `
Object {
  "@@redux-saga/IO": true,
  "SELECT": Object {
    "args": Array [],
    "selector": [Function],
  },
}
`;

exports[`addRelation Saga should replace the relation which has same project, same user 1`] = `
Object {
  "@@redux-saga/IO": true,
  "SELECT": Object {
    "args": Array [],
    "selector": [Function],
  },
}
`;

exports[`getProjects Saga should call the projectLoadingError action if the response errors 1`] = `
Object {
  "@@redux-saga/IO": true,
  "CALL": Object {
    "args": Array [
      "/api/projects",
    ],
    "context": null,
    "fn": [Function],
  },
}
`;

exports[`getProjects Saga should dispatch the projectsLoaded action if it requests the data successfully 1`] = `
Object {
  "@@redux-saga/IO": true,
  "CALL": Object {
    "args": Array [
      "/api/projects",
    ],
    "context": null,
    "fn": [Function],
  },
}
`;

exports[`getRelations Saga should call the relationLoadingError action if the response errors 1`] = `
Object {
  "@@redux-saga/IO": true,
  "CALL": Object {
    "args": Array [
      "/api/relations",
    ],
    "context": null,
    "fn": [Function],
  },
}
`;

exports[`getRelations Saga should dispatch the relationsLoaded action if it requests the data successfully 1`] = `
Object {
  "@@redux-saga/IO": true,
  "CALL": Object {
    "args": Array [
      "/api/relations",
    ],
    "context": null,
    "fn": [Function],
  },
}
`;

exports[`getRoles Saga should call the roleLoadingError action if the response errors 1`] = `
Object {
  "@@redux-saga/IO": true,
  "CALL": Object {
    "args": Array [
      "/api/roles",
    ],
    "context": null,
    "fn": [Function],
  },
}
`;

exports[`getRoles Saga should dispatch the rolesLoaded action if it requests the data successfully 1`] = `
Object {
  "@@redux-saga/IO": true,
  "CALL": Object {
    "args": Array [
      "/api/roles",
    ],
    "context": null,
    "fn": [Function],
  },
}
`;

exports[`getUsers Saga should call the userLoadingError action if the response errors 1`] = `
Object {
  "@@redux-saga/IO": true,
  "CALL": Object {
    "args": Array [
      "/api/users",
    ],
    "context": null,
    "fn": [Function],
  },
}
`;

exports[`getUsers Saga should dispatch the usersLoaded action if it requests the data successfully 1`] = `
Object {
  "@@redux-saga/IO": true,
  "CALL": Object {
    "args": Array [
      "/api/users",
    ],
    "context": null,
    "fn": [Function],
  },
}
`;

exports[`removeRelation Saga should call saveRelations saga with relations list after target relation is gone 1`] = `
Object {
  "@@redux-saga/IO": true,
  "SELECT": Object {
    "args": Array [],
    "selector": [Function],
  },
}
`;

exports[`saveRelations Saga should call the relationLoadingError action if the response errors 1`] = `
Object {
  "@@redux-saga/IO": true,
  "CALL": Object {
    "args": Array [
      "/api/relations",
      Object {
        "body": "[{\\"projectId\\":1,\\"userId\\":1,\\"roleId\\":1},{\\"projectId\\":1,\\"userId\\":2,\\"roleId\\":2}]",
        "headers": Object {
          "Content-Type": "application/json",
        },
        "method": "POST",
      },
    ],
    "context": null,
    "fn": [Function],
  },
}
`;

exports[`saveRelations Saga should dispatch the relationsLoaded action if it posts the data successfully 1`] = `
Object {
  "@@redux-saga/IO": true,
  "CALL": Object {
    "args": Array [
      "/api/relations",
      Object {
        "body": "[{\\"projectId\\":1,\\"userId\\":1,\\"roleId\\":1},{\\"projectId\\":1,\\"userId\\":2,\\"roleId\\":2}]",
        "headers": Object {
          "Content-Type": "application/json",
        },
        "method": "POST",
      },
    ],
    "context": null,
    "fn": [Function],
  },
}
`;
